--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "homebridge-platform-isolarcloud",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "iSolarCloud platform plugin for [HomeBridge](https://github.com/nfarina/homebridge).",
   "dependencies": {
-    "bent": "^7.3.2"
+    "crypto-js": "^4.2.0",
+    "node-rsa": "^1.1.1"
   },
   "devDependencies": {
-    "@types/bent": "^7.3.2",
     "@types/node": "17.0.6",
+    "@types/crypto-js": "^4.2.2",
+    "@types/node-rsa": "^1.1.4",
     "homebridge": "^1.3.9",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.4"
